<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".AddDataInStock">



    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.ActionBar" />

            <ImageView
                android:id="@+id/arrowBack"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_arrow_back_white_24dp" />

        </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="3dp"
            app:cardElevation="3dp"
            app:contentPadding="5dp"
            app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/stockImage"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@drawable/camera"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                android:gravity="center">
                <Spinner
                    android:id="@+id/selectCategory"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:entries="@array/selectcategory"
                    android:focusableInTouchMode="true"
                    android:textSize="25sp">

                </Spinner>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                android:gravity="center">
                <EditText
                    android:id="@+id/shopName"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:hint="@string/shopName"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:inputType="text"
                    android:padding="15dp"
                    android:background="@color/white"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                android:gravity="center">
                <EditText
                    android:id="@+id/price"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:hint="@string/price"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:inputType="number"
                    android:padding="15dp"
                    android:background="@color/white"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                android:gravity="center">
                <EditText
                    android:id="@+id/city"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:hint="@string/city"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:inputType="text"
                    android:padding="15dp"
                    android:background="@color/white"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                android:gravity="center">
                <EditText
                    android:id="@+id/phoneNumber"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:hint="@string/phoneNumber"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:inputType="phone"
                    android:padding="15dp"
                    android:background="@color/white"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                android:gravity="center">
                <EditText
                    android:id="@+id/postCode"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:hint="@string/postCode"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:inputType="number"
                    android:maxLength="4"
                    android:padding="15dp"
                    android:background="@color/white"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                android:gravity="center">

                <EditText
                    android:id="@+id/description"
                    android:layout_width="300dp"
                    android:layout_height="80dp"
                    android:background="@color/white"
                    android:hint="@string/description"
                    android:inputType="textMultiLine"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                android:gravity="center">
                <Button
                    android:id="@+id/submit"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:hint="@string/submit"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:gravity="center"
                    />
            </LinearLayout>




        </LinearLayout>

        </androidx.cardview.widget.CardView>

    </ScrollView>




</LinearLayout>